--- a/views/search.html
+++ b/views/search.html
@@ -1,6 +1,6 @@
 <img src="http://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
 
 <form action="/" method="POST">
-    <input type="text" placeholder="Search for a country" id="cep" name="cep">
+    <input type="text" placeholder="Search for a country" id="country" name="country">
     <input type="submit" value="search" class="button">
 </form>
