--- a/views/address.html
+++ b/views/address.html
@@ -10,7 +10,7 @@
         <li>Time Zone: <span>{{timezone}}</span></li>
         <li>Border(s): <span>{{border}}</span></li>
         
-        <li id='searchanother'><a href="/">Search for another country</a></li>
+        <li id='searchanother'><a id='sanother' href="/">Search for another country</a></li>
     </ul>
 
 </div>
