--- a/views/header.html
+++ b/views/header.html
@@ -52,14 +52,23 @@
             margin: 20px 0 0;
         }
 
-        #searchanother {
-            font-weight: bolder;
+        li#searchanother:hover {
+            background-color: rgb(123, 156, 60);
+        }
+
+        #sanother {
+            font-weight: bold;
+        }
+
+        #sanother:hover {
+            color: whitesmoke;
         }
 
         .button {
             border-color: #5FB6E1;
             background: #5FB6E1;
             color: #fff;
+            cursor: pointer;
         }
 
         #error {
@@ -96,10 +105,6 @@
         li span:hover {
             font-weight: bolder;
             background-color:#FFE6B2;
-        }
-
-        li a:hover {
-            font-weight: bolder;
         }
 
         a, a:visited {
